# advent-of-code

./: Cargo.toml
.github/workflows/: codspeed.yaml
benches/: benches.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs
years/year2015/: Cargo.toml
years/year2015/benches/: benches.rs
years/year2015/src/: day1.rs  lib.rs  main.rs
years/year2016/: Cargo.toml
years/year2016/benches/: benches.rs
years/year2016/src/: day1.rs  lib.rs  main.rs
years/year2017/: Cargo.toml
years/year2017/benches/: benches.rs
years/year2017/src/: day1.rs  lib.rs  main.rs
years/year2018/: Cargo.toml
years/year2018/benches/: benches.rs
years/year2018/src/: day1.rs  lib.rs  main.rs
years/year2019/: Cargo.toml
years/year2019/benches/: benches.rs
years/year2019/src/: day1.rs  lib.rs  main.rs
years/year2020/: Cargo.toml
years/year2020/benches/: benches.rs
years/year2020/src/: day1.rs  lib.rs  main.rs
years/year2021/: Cargo.toml
years/year2021/benches/: benches.rs
years/year2021/src/: day1.rs  lib.rs  main.rs
years/year2022/: Cargo.toml
years/year2022/benches/: benches.rs
years/year2022/src/: day1.rs  lib.rs  main.rs
years/year2023/: Cargo.toml
years/year2023/benches/: benches.rs
years/year2023/src/: day1.rs  lib.rs  main.rs
years/year2024/: Cargo.toml
years/year2024/benches/: benches.rs
years/year2024/src/: day2.rs  day3.rs  day4.rs  day5.rs  main.rs
years/year2025/: Cargo.toml
years/year2025/benches/: benches.rs
years/year2025/src/: day1.rs  lib.rs  main.rs
