[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto = "*"
aoc-runner = "*"
aoc-runner-derive = "*"

[profile.dev]
codegen-units = 1       # allows for maximum threads to be used in compilation. minimum optimization
incremental = true      # allows information to be saved locally to improve recomp times
lto = true             # Some linker optimization, but not many
opt-level = 3           # no optimization to maximize debuginfo

[profile.release]
codegen-units = 1       # number of threads on compilation. 1 allows for maximum optimization
incremental = true     # prevents information to be saved locally to improve recomp times
lto = true              # Causes extended linking time at the expense of compile time
opt-level = 3           # experiment with 2 or 3 (s or z for file size optimization)
strip = "debuginfo"     # removes all debug info from binary (maybe should do "true" instead)

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "benches"
harness = false
