[workspace]
members = ["years/year2015","years/year2016","years/year2017","years/year2018","years/year2019","years/year2020","years/year2021","years/year2022","years/year2023",
    "years/year2024",
    "years/year2025",
]
resolver = "2"

[profile.dev]
codegen-units = 4       # allows for maximum threads to be used in compilation. minimum optimization
incremental = true      # allows information to be saved locally to improve recomp times
lto = true              # Some linker optimization, but not many
opt-level = 0           # no optimization to maximize debuginfo

[profile.release]
codegen-units = 1       # number of threads on compilation. 1 allows for maximum optimization
incremental = true      # prevents information to be saved locally to improve recomp times
lto = true              # Causes extended linking time at the expense of compile time
opt-level = 3           # experiment with 2 or 3 (s or z for file size optimization)
strip = "debuginfo"     # removes all debug info from binary (maybe should do "true" instead)
