[package]
name = "year2025"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

[lib]
bench = false # Recommended for aoc-runner crates

[dev-dependencies]
criterion = { version = "4.2.0", package = "codspeed-criterion-compat" }

[[bench]]
name = "benches"
harness = false
